kind of fixed the overflowith for now

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,3 +1,4 @@
 .MuiGrid-spacing-xs-8-145 {
     width: 100%!important;
+    height: 100%!important;
 }
